--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -48,7 +48,7 @@
         tools:text="Une description de texte au lieu  de ce texte  qui ne veut rien dire....       " />
 
     <TextView
-        android:id="@+id/button"
+        android:id="@+id/tvLikes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -62,7 +62,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvShare"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -71,7 +71,7 @@
         android:textColor="#0A72C5"
         android:textSize="12sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/button"
+        app:layout_constraintStart_toEndOf="@+id/tvLikes"
         app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
 
     <ImageView
